# OccWrapper

./: .travis.yml  CMakeLists.txt  README.md
cmake_helper/: FindOpenCasCade.cmake  Findpybind11.cmake  functions.cmake
doc/: Makefile  conf.py  make.bat  output.txt
doc/_build/: .buildinfo  modules.html  objects.inv  searchindex.js
doc/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree
doc/_build/doctrees/: environment.pickle
doc/_build/html/: genindex.html  index.html  search.html
doc/_build/html/_sources/: index.rst.txt  modules.rst.txt
doc/source/: conf.py  index.rst  modules.rst
doc/source/_generate/: OccWrapper.ModifiedSolid.rst
include/: .OccShape.h.swp  .OccTypes.h.swp  OccBooleanSolid.h  OccBox.h  OccCylinder.h  OccEdge.h  OccFace.h  OccFaceComparator.h  OccModifiedSolid.h  OccModifiedSolids.h  OccPrimitive.h  OccShape.h  OccSolid.h  OccSolidMaker.h  OccSolidModifier.h  OccTypes.h  PrimitiveSolidManager.h
src/: .OccShape.cpp.swp  CMakeLists.txt  OccBooleanSolid.cpp  OccBox.cpp  OccCylinder.cpp  OccEdge.cpp  OccFace.cpp  OccFaceComparator.cpp  OccModifiedSolid.cpp  OccModifiedSolids.cpp  OccPrimitive.cpp  OccShape.cpp  OccSolid.cpp  OccSolidMaker.cpp  OccSolidModifier.cpp  PrimitiveSolidManager.cpp
srcPy/: CMakeLists.txt  OccBooleanSolidPy.cpp  OccBoxPy.cpp  OccBoxPy.h  OccCylinderPy.cpp  OccCylinderPy.h  OccEdgePy.cpp  OccFacePy.cpp  OccModifiedSolidPy.cpp  OccPrimitivePy.cpp  OccShapePy.cpp  OccShapePy.h  OccSolidMakerPy.cpp  OccSolidModifierPy.cpp  OccSolidPy.cpp  OccWrapperPy.cpp  test.cpp
test/: CMakeLists.txt  OccBooleanSolidTester.cpp  OccEdgeTester.cpp  OccFaceComparatorTester.cpp  OccModifiedSolidTester.cpp  OccShapeTester.cpp  OccSolidMakerTester.cpp  OccSolidModifierTester.cpp  OccSolidTester.cpp  PrimitiveSolidManagerTester.cpp  SimpleTest.cpp
